# quake-legacy

./: .gitignore  CLAUDE.md  HUMAN-QUESTIONS.md  NEXT_SESSION.md  README.md  SPLIT1_USER_CHECKLIST.md  build.js  package.json  pyproject.toml  start_ui.bat  stop_ui.bat
creative_suite/: __init__.py  __main__.py  _port_check.py  app.py  config.py  config_tools.yaml  music_match.py  otio_bridge.py  requirements.txt
creative_suite/annotations/: __init__.py  store.py
creative_suite/api/: _git_flow.py  _preview_job.py  _rebuild_job.py  _render_worker.py  _waveform.py  annotations.py  assets.py  capture.py  clips.py  comfy.py  editor.py  engine.py  forge.py  md3.py  ollama.py  packs.py  parts.py  phase1.py  studio.py  variants.py
creative_suite/capture/: __init__.py  gamestart.py
creative_suite/clips/: ffprobe.py  parser.py  resolver.py
creative_suite/comfy/: __init__.py  client.py  download_controlnet.py  download_loras.py  full_overnight.py  init_db.py  photoreal_e2e_test.py  prompts.py  runner.py  verify_comfyui.py  verify_workflows.py
creative_suite/database/: MusicLibrary.json  nle_db.py  nle_schema.sql  schema.sql
creative_suite/db/: __init__.py  migrate.py  schema.sql
creative_suite/editor/: __init__.py  otio_bridge.py  proxies.py  state.py
creative_suite/engine/: assembler.py  audio_levels.py  beat_sync.py  build_part5_chunks.py  clip_filter.py  clip_list.py  config.py  experiment.py  graph_builder.py  intro.py  inventory.py  manifest_generator.py  morning_retries.sh  music_chain.py  music_contract.py  music_stitcher.py  normalize.py  overnight_part4_retry.sh  overnight_queue.sh  pipeline.py  preview.py  render_part4.py  render_part4_v5.py  render_part4_v5_direct.py  render_part_v6.py  render_supervisor.sh  requirements.txt  resume_queue.sh  scrub_normalize_cache.py  sidechain.py  silence_detect.py  supervisor.py  title_card.py  transitions.py  verify_env.py
creative_suite/engine/parser/: CMakeLists.txt  README.md
creative_suite/engine/parser/include/dm73/: reader.h
creative_suite/engine/parser/src/: dm73_reader.cpp  frag_extractor.cpp  main.cpp
creative_suite/frontend/: README.md  api-client.js  app-cinema.js  app.js  cinema.css  cinema.html  creative-maps.js  creative-md3.js  creative-packs.js  creative-prompts.js  creative-queue.js  creative-skins.js  creative-sprites.js  creative-textures.js  editor-api.js  (+36 more)
docs/: INDEX.md
engine/: README.md
graphify-out/: engine_knowledge_graph.html  engine_knowledge_graph.json
phase1/: audio_levels.py  audio_onsets.py  beat_sync.py  clip_list.py  config.py  experiment.py  intro.py  music_stitcher.py  music_structure.py  normalize.py  pipeline.py  render_part4.py  render_part_v6.py  sidechain.py  silence_detect.py  title_card.py
scripts/: backfill_manifests.py  demo_inventory.py  finalize_report.py  rescan_clips.py
tools/: index_rules_to_qdrant.py
(+977 files in other folders)
